Kubernetes/deployment/customer-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-api-deployment
  namespace: microservice
spec:
  selector:
    matchLabels:
      app: customer-api
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: customer-api
    spec:
      containers:
      - name: customer-api
        image: ovibhuiyan43/customer-api:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      restartPolicy: Always   
---
apiVersion: v1
kind: Service
metadata:
  name: customer-api-service
  namespace: microservice
spec:
  type: LoadBalancer
  selector:
    app: customer-api
  ports:
  - name: http-5100
    port: 5100 # extarnal port
    targetPort: 80 #internal port
