Kubernetes/deployment/sqlserver.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sqlserver-statefulset
  namespace: microservice
spec:
  selector:
    matchLabels:
      app: sqlserver
  serviceName: "sqlserver-service"
  replicas: 1
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      containers:
      - name: sqlserver
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: sqlserver-data
          mountPath: /var/opt/mssql
  volumeClaimTemplates:
  - metadata:
      name: sqlserver-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: sqlserver-service
  namespace: microservice
spec:
  selector:
    app: sqlserver
  ports:
  - port: 1435
    targetPort: 1433
