Kubernetes/deployment/customer-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-web-ingress
  namespace: microservice
spec:
  rules:
  - host:  microservice.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: customer-web-service
            port: 
              number: 6100
